libebook-tools-perl (0.5.2-1) unstable; urgency=medium

  * New upstream version
    * Fixes incompatibility with perl < 5.16
  * Dependency list fixed

 -- Zed Pobre <zed@debian.org>  Thu, 25 Sep 2014 16:12:21 -0400

libebook-tools-perl (0.5.0-1) unstable; urgency=medium

  * New upstream version
    * epub generation is now reliable
    * lots of metadata normalization now happens
    * BISG website parser to download BISAC data
    * single-pass conversion from any unpackable format to epub
  * UTF-8 fixes compatible with perl 5.20 (fixes: #759970)

 -- Zed Pobre <zed@debian.org>  Wed, 24 Sep 2014 21:35:32 -0400

libebook-tools-perl (0.4.9-1) unstable; urgency=low

  * New upstream version:
    * ebook unpack now unpacks .epub (or .zip) files
    * MMDDYYYY-unparseable test removed (closes: 642163)
  * Standards-Version 3.9.2

 -- Zed Pobre <zed@debian.org>  Thu, 15 Dec 2011 12:28:19 -0500

libebook-tools-perl (0.4.8-1) unstable; urgency=low

  * New upstream version:
    * Mobipocket unpacks now correctly account for the extra data that
      can be appended to PalmDoc-compressed text records that should not
      be made part of the decompression process.
    * YYYY-MMDD date test removed (closes: #560627)
  * Standards-Version: 3.8.4 (no changes required)
  * Specify perl (>= 5.10.1) as a preferred build-dependency alternative
    to libmodule-build-perl (>= 0.3000)

 -- Zed Pobre <zed@debian.org>  Sun, 13 Jun 2010 14:16:33 -0400

libebook-tools-perl (0.4.6-2) unstable; urgency=low

  * Add Vcs-Git entry to debian/control
  * Remove palm-doc from Depends in debian/control (closes: #546722)

 -- Zed Pobre <zed@debian.org>  Fri, 25 Sep 2009 15:48:36 -0400

libebook-tools-perl (0.4.6-1) unstable; urgency=low

  * New Upstream Version
    * EReader HTML conversions now attempt to produce XHTML
    * EReader HTML conversions may produce slightly more readable output
    * README now contains a more accurate list of module dependencies