@@ -1,15 +1,6 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/makefile.mk
-include /usr/share/cdbs/1/class/perlmodule.mk
-
 export AUTOMATED_TESTING=1
 
-# Add here any variable or target overrides you need.
-clean::
-	rm -f Makefile
-
-install/libebook-tools-perl::
-	find debian/libebook-tools-perl -type f -name .packlist -delete
-	find debian/libebook-tools-perl -type d -empty -delete
+%:
+	dh $@
