@@ -3,6 +3,7 @@ libebook-tools-perl (0.5.2-1) unstable; urgency=medium
   * New upstream version
     * Fixes incompatibility with perl < 5.16
   * Dependency list fixed
+  * Convert from CDBS to Debhelper
 
  -- Zed Pobre <zed@debian.org>  Thu, 25 Sep 2014 16:12:21 -0400
 
